--- a/course-outline.qmd
+++ b/course-outline.qmd
@@ -5,8 +5,8 @@ title: "Course Outline"
 ### Pre-Workshop Installation and Set Up
 
 Learning Objective: Set up a GitHub account and install git (pre-workshop).\
-Instructions: [Installation and Set-Up](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/00-software-install.html)\
-Assignment: [Pre-Workshop Assignment](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/01-assignment.html)\
+Instructions: [Installation and Set-Up](./pre-workshop/software-install.html)\
+Assignment: [Pre-Workshop Assignment](./pre-workshop/assignment.html)\
 
 Topics/Learning Outcomes:
 
@@ -24,7 +24,7 @@ Course Reference Material:
 ### Section 1. Introductions and What is Version Control?
 
 Learning Objective: Understand the value-add of using version control and the the basics of how automated version control systems work.\
-Slides: [Section 1 Slides](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc/01-what-is-vc.html)
+Slides: [Section 1 Slides](./slides/01-what-is-vc.html)
 
 Topics:
 
@@ -39,7 +39,7 @@ Course Reference Material:
 ### Section 2. Working local with git
 
 Learning Objective: Use command-line git to track local file changes.\
-Slides: [Section 2 Slides](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/02-working-local/02-working-local.html)
+Slides: [Section 2 Slides](./slides/02-working-local.html)
 
 Topics:
 
@@ -62,7 +62,7 @@ Course Reference Material:
 ### Section 3. Remote Code Hosting and GitHub
 
 Learning Objective: What are remote hosting platforms and why do we use them?\
-Slides: [Section 3 Slides](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/03-remote-hosting/03-remote-hosting.html)
+Slides: [Section 3 Slides](./slides/03-remote-hosting.html)
 
 Topics:
 
@@ -81,26 +81,26 @@ Course Reference Material:
 -   [bcgov-r-geo-workshop Lesson 6](https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/06-github.md)
 -   [Github: Keeping your Account and Data Secure](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github)
 
-### Section 4
+### Section 4. BC Government GitHub Organization (bcgov)
 
 Learning Objective: Understand how the bcgov framework, policy and related tools help B.C. government employees share code on GitHub\
-Slides: [Section 4 Slides](https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/04-bcgov-org/04-bcgov-org.html)
+Slides: [Section 4 Slides](./slides/04-bcgov-org.html)
 
 Topics:
 
--   what is the bcgov organization framework
--   bcgov policy framework and licensing
+-   what is the `bcgov` organization framework
+-   `bcgov` policy framework and licensing
 -   code-sharing and teams
--   bcgov-c, bcgov enterprise
+-   `bcgov-c`, `bcgov enterprise`
 
 Course Reference Material:
 
 -   [SW Carpentry Episode 10. Open Science](https://swcarpentry.github.io/git-novice/10-open.html)
--   [SW Carpentry Episode 11. Licensing](https://swcarpentry.github.io/git-novice/11-licensing.html))
+-   [SW Carpentry Episode 11. Licensing](https://swcarpentry.github.io/git-novice/11-licensing.html)
 -   [SW Carpentry Episode 12. Citation](https://swcarpentry.github.io/git-novice/12-citation.html)
 -   [SW Carpentry Episode 13. Hosting](https://swcarpentry.github.io/git-novice/13-hosting.html)
 
-Further Links to BC Gov Organization Resources:
+Further Links to `bcgov` Organization Resources:
 
 -   [Content Approval Checklist](https://github.com/bcgov/BC-Policy-Framework-For-GitHub/blob/master/BC-Open-Source-Development-Employee-Guide/Content-Approval-Checklist.md)
 -   [BC Gov Organizations in GitHub](https://docs.developer.gov.bc.ca/bc-government-organizations-in-github/)
