--- a/materials/01-what-is-vc.qmd
+++ b/materials/01-what-is-vc.qmd
@@ -4,7 +4,7 @@ title: "1. What is Version Control"
 
 ## 1.1 What is Version Control?
 
-**Version control**, also known as source control, is the practice of tracking and managing changes to software code. **Version control systems** are software tools that help software teams manage changes to source code over time.
+**Version control**, also known as source control, is the practice of tracking and managing changes to software code. **Version control systems** are software tools that are used to help individuals and software development teams manage changes to code/documents over time. 
 
 Consider the following scenario. You and your colleagues have been asked to do an analysis of the Work Environment Survey study to determine if workplace satisfaction has increased or decreased significantly since the start of the pandemic. You and your colleagues want to be able to work on the project at the same time, but have run into problems doing this in the past. If you take turns, each of you will spend a lot of time waiting for the other to finish, but if you work on your own copies and save them to the local network, things will be lost, overwritten, or duplicated. A colleague suggests using version control to manage your work.
 
