edit for directory permissions

--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -8,15 +8,15 @@ knitr::opts_chunk$set(eval = FALSE)
 
 ## 2.1 **Creating a Repository**
 
-First, let's create a new directory in the `Desktop` folder for our work and then change the current working directory to the newly created one:
+First, let's create a new directory on the C drive for our work. Your user profile on the C drive is the best place to create a repository for now. Git does not know how to reconcile ownership H drive as a "safe" fplace for for our work and then change the current working directory to the newly created one:
 
 ```{bash}
-$ cd ~/Desktop
+$ cd c:/Users/BASHCROF
 $ mkdir planets
 $ cd planets
 ```
 
-Then we tell Git to make `planets` a [repository](https://swcarpentry.github.io/git-novice/reference.html#repository) \-- a place where Git can store versions of our files:
+Then we tell Git to make `planets` a [repository](https://swcarpentry.github.io/git-novice/reference.html#repository) -- a place where Git can store versions of our files:
 
 ```{bash}
 $ git init
@@ -243,7 +243,7 @@ $ git commit -m "Add concerns about effects of Mars' moons on Wolfman"
  1 file changed, 1 insertion(+)
 ```
 
-Git insists that we add files to the set we want to commit before actually committing anything. This allows us to commit our changes in stages and capture changes in logical portions rather than only large batches. For example, suppose we're adding a few citations to relevant research to our thesis. We might want to commit those additions, and the corresponding bibliography entries, but *not*commit some of our work drafting the conclusion (which we haven't finished yet).
+Git insists that we add files to the set we want to commit before actually committing anything. This allows us to commit our changes in stages and capture changes in logical portions rather than only large batches. For example, suppose we're adding a few citations to relevant research to our thesis. We might want to commit those additions, and the corresponding bibliography entries, but *not* commit some of our work drafting the conclusion (which we haven't finished yet).
 
 ## 2.5 **The Staging Area**
 
